# gst-gz

./: .gitignore  LICENSE  README.md  cleanup.sh  configure.ac
src/: .gitignore  Makefile.am  gstgz.c  gstgzdec.c  gstgzdec.h
